# cyberimmune-systems-example-traffic-light-kos

./: CMakeLists.txt  gen_policy.py
central_server/: README.md  requests.rest
connector/: CMakeLists.txt
connector/src/: connector.c
control_system/src/: control_system.c
einit/: CMakeLists.txt
einit/src/: init.yaml.in  security.psl
lights_gpio/src/: lights_gpio.c
resources/: ConfigurationMessage.idl  Connector.edl  Diagnostics.edl
